@@ -224,6 +224,36 @@ if (PMA_MYSQL_INT_VERSION >= 40100){
         return $descr;
     }
 
+    function PMA_getDbCollation($db) {
+        global $dbh;
+
+        if (PMA_MYSQL_INT_VERSION >= 40101) {
+            // MySQL 4.1.0 does not support seperate charset settings
+            // for databases.
+
+            $sql_query = 'SHOW CREATE DATABASE `' . $db . '`;';
+            $res = PMA_mysql_query($sql_query, $dbh) or PMA_mysqlDie(PMA_mysql_error($dbh), $sql_query);
+            $row = PMA_mysql_fetch_row($res);
+            mysql_free_result($res);
+            $tokenized = explode(' ', $row[1]);
+            unset($row, $res, $sql_query);
+
+            for ($i = 1; $i + 3 < count($tokenized); $i++) {
+                if ($tokenized[$i] == 'DEFAULT' && $tokenized[$i + 1] == 'CHARACTER' && $tokenized[$i + 2] == 'SET') {
+                    // We've found the character set!
+                    if (isset($tokenized[$i + 5]) && $tokenized[$i + 4] == 'COLLATE') {
+                        return $tokenized[$i + 5]; // We found the collation!
+                    } else {
+                        // We did not find the collation, so let's return the
+                        // default collation for the charset we've found.
+                        return $GLOBALS['mysql_default_collations'][$tokenized [$i + 3]];
+                    }
+                }
+            }
+        }
+        return '';
+    }
+
 }
 
 ?>
