@@ -19,7 +19,7 @@ $local_query         = 'SHOW TABLE STATUS LIKE \'' . PMA_sqlAddslashes($table, T
 $table_info_result   = PMA_mysql_query($local_query) or PMA_mysqlDie('', $local_query, '', $err_url_0);
 $showtable           = PMA_mysql_fetch_array($table_info_result);
 $tbl_type            = strtoupper($showtable['Type']);
-$tbl_charset         = empty($showtable['Charset']) ? '' : $showtable['Charset'];
+$tbl_charset         = empty($showtable['Collation']) ? '' : $showtable['Collation'];
 $table_info_num_rows = (isset($showtable['Rows']) ? $showtable['Rows'] : 0);
 $show_comment        = (isset($showtable['Comment']) ? $showtable['Comment'] : '');
 $auto_increment      = (isset($showtable['Auto_increment']) ? $showtable['Auto_increment'] : '');
