@@ -5,6 +5,14 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2003-12-29 Alexander M. Turek  <crazysexycool@derrabus.de>
+    * db_details_structure.php, libraries/mysql_charsets.lib.php:
+      - display database collation (MySQL >= 4.1.1);
+      - list collations of all tables.
+    * tbl_properties_strcuture, tbl_properties_table_info.php:
+      - Changed "Charset" label to "Collation" because it fits better;
+      - The column collations weren't displayed with MySQL 5.0.
+
 2003-12-28 Marc Delisle  <lem9@users.sourceforge.net>
     ### 2.5.5 released
 
